# omars_analysis

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
omars_analysis/: .gitignore  __init__.py  generate_model_matrix_heredity.py  main.py  omars_analysis_oop.py  subset_selection.py
omars_analysis/data/: Laser_data.txt  jn_data.txt
