[tool.poetry]
name = "omars-analysis"
version = "1.0.8"
description = ""
authors = ["Mohammed Saif Ismail Hameed <saifismailh@gmail.com>"]
readme = "README.md"
packages = [{include = "omars_analysis"}]
repository = "https://github.com/saif-ismail/omars_analysis/"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
